cambios en html

--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Profesor.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Profesor.html
@@ -263,7 +263,7 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td>Voleibol</td>
+                                    <td> <a href="consultaActividadDeportiva.html">Voleibol</a></td>
                                     <td>Voleibol en todas sus formas</td>
                                  </tr>
                                  <tr>
@@ -295,7 +295,7 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td>Voleibol</td>
+                                    <td> <a href="consultaDictadoDeClases.html">Voleibol</a></td>
                                     <td>10/06/21</td>
                                     <td>Voleibol</td>
                                  </tr>
