--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
@@ -236,31 +236,31 @@
 										<tbody>
 											<tr>
 												<th scope="row">1</th>
-												<td><a href="url">Voleibol</a></td>
+												<td><a href="consultaDictadoDeClases.html">Voleibol</a></td>
 												<td>10/06/21</td>
 												<td>Voleibol</td>
 											</tr>
 											<tr>
 												<th scope="row">2</th>
-												<td><a href="url">Aeróbico adulto mayor</a></td>
+												<td>Aeróbico adulto mayor</td>
 												<td>31/08/21</td>
 												<td>Aeróbica</td>
 											</tr>
 											<tr>
 												<th scope="row">3</th>
-												<td><a href="url">Músculos para boxeo</a></td>
+												<td>Músculos para boxeo</td>
 												<td>15/10/21</td>
 												<td>Kickboxing</td>
 											</tr>
 											<tr>
 												<th scope="row">4</th>
-												<td><a href="url">200 M</a></td>
+												<td>200 M</td>
 												<td>25/10/21</td>
 												<td>Atletismo</td>
 											</tr>
 											<tr>
 												<th scope="row">5</th>
-												<td><a href="url">Basquet I</a></td>
+												<td>Basquet I</td>
 												<td>01/09/21</td>
 												<td>Basquetbol</td>
 											</tr>
@@ -288,7 +288,7 @@
 										<tbody>
 											<tr>
 												<th scope="row">1</th>
-												<td>Pelota</td>
+												<td><a href="consultaCuponera.html">Pelota</a></td>
 												<td>Deportes con pelota</td>
 											</tr>
 										</tbody>
