cambios en hardcodeo

--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
@@ -149,7 +149,9 @@
 					</div>
 					<div class="tab-pane fade" id="clases" role="tabpanel"
 						aria-labelledby="clases-tab">
-						<p class="card-text m-3"><a href="consultaDictadoDeClases.html">Clase 10/06/2021</a></p>
+						<p class="card-text m-3"><a href="consultaDictadoDeClases.html">Voleibol</a></p>
+						<p class="card-text m-3"><a href="#">Braza</a></p>
+						<p class="card-text m-3"><a href="#">Mariposa</a></p>
 					</div>
 				</div>
 			</div>
