--- a/tarea2/website_entrenamos.uy/src/main/webapp/home.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/home.html
@@ -149,17 +149,14 @@
 							<h5 class="card-title">
 								<a href="consultaActividadDeportiva.html" class="">Voleibol</a>
 							</h5>
-							<p class="card-text">This is a wider card with supporting
-								text below as a natural lead-in to additional content. This
-								content is a little bit longer.</p>
+							<p class="card-text">Voleibol en todas sus formas.</p>
 						</div>
 					</div>
 					<div class="card">
 						<img src="./resources/img/a2.jpg" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">
-								<a href="consultaActividadDeportiva.html" class="">Actividad
-									2</a>
+								<a href="#" class="">Atletismo</a>
 							</h5>
 							<p class="card-text">This card has supporting text below as a
 								natural lead-in to additional content.</p>
@@ -169,13 +166,9 @@
 						<img src="./resources/img/a3.jpg" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">
-								<a href="consultaActividadDeportiva.html" class="">Actividad
-									3</a>
+								<a href="#" class="">Basquetbol</a>
 							</h5>
-							<p class="card-text">This is a wider card with supporting
-								text below as a natural lead-in to additional content. This card
-								has even longer content than the first to show that equal height
-								action.</p>
+							<p class="card-text">Basquetbol para todos.</p>
 						</div>
 					</div>
 				</div>
