--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaCategoria.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaCategoria.html
@@ -101,13 +101,25 @@
   							</thead>
   							<tbody>
    							 <tr>
-     						 <th scope="row">1</th>
+     							<th scope="row">1</th>
       							<td> <a href="consultaActividadDeportiva.html">Voleibol</a> </td>
     						</tr>
     						<tr>
       							<th scope="row">2</th>
-      							<td>Basquetbol </td>
+      							<td>Kickboxing </td>
     						</tr>  
+    						<tr>
+      							<th scope="row">3</th>
+      							<td>Atletismo </td>
+    						</tr> 
+    						<tr>
+      							<th scope="row">4</th>
+      							<td>Basquetbol </td>
+    						</tr> 
+    						<tr>
+      							<th scope="row">5</th>
+      							<td>Voleibol II </td>
+    						</tr> 
   						</tbody>
 					</table>
 					
