--- a/tarea2/website_entrenamos.uy/src/main/webapp/home.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/home.html
@@ -158,8 +158,7 @@
 							<h5 class="card-title">
 								<a href="#" class="">Atletismo</a>
 							</h5>
-							<p class="card-text">This card has supporting text below as a
-								natural lead-in to additional content.</p>
+							<p class="card-text">100m , 200m, postas y carreras con obstaculos.</p>
 						</div>
 					</div>
 					<div class="card">
