--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
@@ -38,7 +38,7 @@
 							id="navbarDropdownCuponera" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Menu</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
-								<a class="dropdown-item" href="#">Usuarios</a>
+								<a class="dropdown-item" href="consultaUsuario.html">Usuarios</a>
 								<a class="dropdown-item" href="#">Alta de Actividad Deportiva (solo si profe)</a>
 								<a class="dropdown-item" href="altaDictadoDeClases.html">Alta de Dictado de Clase (solo si profe)</a>  
 							</div>
