--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
@@ -38,7 +38,7 @@
 							id="navbarDropdownMenu" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Menu</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
-								<a class="dropdown-item" href="#">Usuarios</a> 
+								<a class="dropdown-item" href="consultaUsuario.html">Usuarios</a>
 							</div></li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
@@ -49,7 +49,7 @@
 			</div>
 			<div class="btn-group">
 				<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
-				<a href="#" class="btn btn-light btn-sm">Registrarse</a>
+				<a href="altaUsuario.html" class="btn btn-light btn-sm">Registrarse</a>
 			</div>
 		</nav>
 
