--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaCategoria.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaCategoria.html
@@ -38,8 +38,9 @@
 							id="navbarDropdownMenu" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Menu</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
-								<a class="dropdown-item" href="#">Usuarios</a> 
-							</div></li>
+								<a class="dropdown-item" href="consultaUsuario.html">Usuarios</a>
+							</div>
+						</li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
 						<input class="form-control" type="text" placeholder="Buscar"
@@ -49,7 +50,7 @@
 			</div>
 			<div class="btn-group">
 				<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
-				<a href="#" class="btn btn-light btn-sm">Registrarse</a>
+				<a href="altaUsuario.html" class="btn btn-light btn-sm">Registrarse</a>
 			</div>
 		</nav>
 
