--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaInstitucion.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaInstitucion.html
@@ -21,7 +21,7 @@
 		<!-- Fixed navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Entrenamos.uy</a>
+				<a class="navbar-brand" href="#">Entrenamos.uy</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarEntrenamos" aria-controls="navbarEntrenamos"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -38,8 +38,9 @@
 							id="navbarDropdownMenu" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Menu</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
-								<a class="dropdown-item" href="#">Usuarios</a> 
-							</div></li>
+								<a class="dropdown-item" href="consultaUsuario.html">Usuarios</a>
+							</div>
+						</li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
 						<input class="form-control" type="text" placeholder="Buscar"
@@ -49,7 +50,7 @@
 			</div>
 			<div class="btn-group">
 				<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
-				<a href="#" class="btn btn-light btn-sm">Registrarse</a>
+				<a href="altaUsuario.html" class="btn btn-light btn-sm">Registrarse</a>
 			</div>
 		</nav>
 
