--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
@@ -31,46 +31,16 @@
 				<div class="collapse navbar-collapse" id="navbarEntrenamos">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active"><a class="nav-link"
-							href="index.html">Home <span class="sr-only">(current)</span></a>
+							href="home.html">Home <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownCuponera" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Cuponeras</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownCuponera">
-								<a class="dropdown-item" href="#">Comprar</a> <a
-									class="dropdown-item" href="#">Consultar</a>
-							</div></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownClase" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Clases</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
-								<a class="dropdown-item" href="consultaDictadoDeClases.html">Consulta</a>
-								<a class="dropdown-item" href="altaDictadoDeClases.html">Alta</a>
-								<a class="dropdown-item" href="registroDictadoDeClases.html">Registro</a>
-							</div></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownActividades" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownActividades">
-								<a class="dropdown-item" href="altaActividadDeportiva.html">Alta</a>
-								<a class="dropdown-item" href="consultaActividadDeportiva.html">Consulta</a>
-							</div></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownUsuarios" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Usuarios</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownUsuarios">
-								<a class="dropdown-item" href="#">Consulta</a> <a
-									class="dropdown-item" href="#">Seguir</a> <a
-									class="dropdown-item" href="#">Dejar de seguir</a> <a
-									class="dropdown-item" href="#">Modificar mis datos</a>
-							</div></li>
+							id="navbarDropdownMenu" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">Menu</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+								<a class="dropdown-item" href=consultaUsuario.html">Usuarios</a>
+							</div>
+						</li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
 						<input class="form-control" type="text" placeholder="Buscar"
@@ -80,15 +50,16 @@
 			</div>
 			<div class="btn-group">
 				<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
-				<a href="#" class="btn btn-light btn-sm">Registrarse</a>
+				<a href="altaUsuario.html" class="btn btn-light btn-sm">Registrarse</a>
 			</div>
 		</nav>
 
 	</header>
+
 	<!-- Begin page content -->
 	<main role="main" class="container">
 		<div class="row">
-			<div class="col-12 col-md-3">
+			<div class="col-6 col-md-4">
 				<ul id="listaInstituciones" class="list-group my-4">
 					<li class="list-group-item"><strong>Instituciones
 							Deportivas</strong></li>
@@ -106,7 +77,7 @@
 					<li class="list-group-item">Gimnasia</li>
 				</ul>
 			</div>
-			<div class="col-12 col-md-9">
+			<div class="col-12 col-md-8">
 				<div id="content">
 					<div class="container-fluid">
 						<h3 class="text-dark mb-4">Perfil</h3>
