--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
@@ -38,7 +38,7 @@
 							id="navbarDropdownMenu" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Menu</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
-								<a class="dropdown-item" href=consultaUsuario.html">Usuarios</a>
+								<a class="dropdown-item" href="consultaUsuario.html">Usuarios</a>
 							</div>
 						</li>
 					</ul>
