consulta con foto

--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaUsuario.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaUsuario.html
@@ -96,12 +96,14 @@
   							<thead>
     							<tr>
      							 <th scope="col">#</th>
+     							 <th></th>
      							 <th scope="col">Nombre</th>
     							</tr>
   							</thead>
   							<tbody>
    							 <tr>
      							<th scope="row">1</th>
+     							<td> <img src="https://bit.ly/3lxoBvZ" width="30" height="30" class="rounded-circle"> </td>
       							<td> <a href="consultaPerfilUsuario-Socio.html">Emiliano Lucas</a> </td>
     						</tr>
   						</tbody>
@@ -116,12 +118,14 @@
   							<thead>
     							<tr>
      							 <th scope="col">#</th>
+     							 <th></th>
      							 <th scope="col">Nombre</th>
     							</tr>
   							</thead>
   							<tbody>
    							 <tr>
      						 <th scope="row">1</th>
+     						 	<td> <img src="https://bit.ly/3lKq8Px" width="30" height="30" class="rounded-circle"> </td>
       							<td><a href="consultaPerfilUsuario-Profesor.html">Denis Miguel</a></td> 
     						</tr>
     					</tbody>
