--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Profesor.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Profesor.html
@@ -362,7 +362,7 @@
                                              <td>.</td>
                                           </tr>
                                           <tr>
-                                             <td class="stat">Emi71</td>
+                                             <td class="stat"><a href="consultaPerfilUsuario-Socio.html">Emi71</a></td>
                                              <td>.</td>
                                           </tr>
                                           <tr>
