--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
@@ -304,7 +304,7 @@
 															<td>.</td>
 														</tr>
 														<tr>
-															<td class="stat">denis</td>
+															<td class="stat"><a href="consultaPerfilUsuario-Profesor.html">denis</a></td>
 															<td>.</td>
 														</tr>
 														<tr>
