--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
@@ -97,6 +97,11 @@
 											src="https://bit.ly/3lxoBvZ" width="160" height="160" />
 									</div>
 								</div>
+								<div class="card mb-3">
+									<div class="card-body text-center shadow">
+									   <button type="button" class="btn btn-success" style="font-size: smaller;">Seguir / Dejar de seguir</button>
+									</div>
+								 </div>
 							</div>
 							<div class="col-lg-8">
 								<div class="row mb-3 d-none">
