--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
@@ -95,6 +95,11 @@
                                  height="160" />
                            </div>
                         </div>
+                        <div class="card mb-3">
+                           <div class="card-body text-center shadow">
+                              <button type="button" class="btn btn-success" style="font-size: smaller;">Seguir / Dejar de seguir</button>
+                           </div>
+                        </div>
                      </div>
                      <div class="col-lg-8">
                         <div class="row mb-3 d-none">
