avance en registro a clase

--- a/tarea2/website_entrenamos.uy/src/main/webapp/registroDictadoDeClases.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/registroDictadoDeClases.html
@@ -166,6 +166,7 @@
 								<select id="institucionDeportiva" name="institucionDeportiva"
 									class="custom-select" required="required">
 									<option value="Instituto Natural">Pelota</option>
+									<option value="Instituto Natural2">Pelota2</option>
 									
 								</select>
 							</div>
