arreglos al html

--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
@@ -180,7 +180,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="form-row">
+                                    <div class="form-row soloProfesor">
                                        <div class="col">
                                           <div class="form-group">
                                              <label for="first_name">
@@ -199,7 +199,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="form-row">
+                                    <div class="form-row soloProfesor">
                                        <div class="col">
                                           <div class="form-group">
                                              <label for="first_name">
@@ -224,7 +224,7 @@
                      </div>
                   </div>
 
-                  <div class="card shadow mb-5">
+                  <div class="card shadow mb-5 soloProfesor">
                      <div id="act-dep" class="card-header py-3">
                         <p class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas (Aceptada)</p>
                      </div>
@@ -241,18 +241,13 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
+                                    <td> <a href="consultaActividadDeportiva.html">Voleibol</a></td>
+                                    <td>Voleibol en todas sus formas</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td>Atletismo</td>
+                                    <td>100m , 200m, postas y carreras con obstaculos.</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -278,21 +273,9 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry the Bird</td>
-                                    <td>@twitter</td>
-                                    <td>@fat</td>
+                                    <td> <a href="consultaDictadoDeClases.html">Voleibol</a></td>
+                                    <td>10/06/21</td>
+                                    <td>Voleibol</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -300,9 +283,10 @@
                      </div>
                   </div>
 
-                  <div class="card shadow mb-5">
+                  <div class="card shadow mb-5 soloProfesor propioProfesor">
                      <div id="act-dep-ing" class="card-header py-3">
-                        <p   class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas (Ingresada, Rechazada)</p>
+                        <p class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas (Ingresada,
+                           Rechazada)</p>
                      </div>
                      <div id="act-dep-ing-cont" class="card-body">
                         <div class="row">
@@ -318,20 +302,15 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
+                                    <td>Voleibol II</td>
+                                    <td>Voleibol avanzado.</td>
+                                    <td>Rechazada</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td>Basquetbol II</td>
+                                    <td>Basequetbol avanzado.</td>
+                                    <td>Ingresada</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -339,37 +318,32 @@
                      </div>
                   </div>
 
-                  <div class="card shadow mb-5">
-                     <div id="cuponeras" class="card-header py-3">
-                        <p class="text-primary m-0 font-weight-bold">Cuponeras del socio</p>
-                     </div>
-                     <div id="cuponeras-cont" class="card-body">
-                        <div class="row">
-                           <table class="table table-hover">
-                              <thead>
-                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Nombre</th>
-                                 </tr>
-                              </thead>
-                              <tbody>
-                                 <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                 </tr>
-                              </tbody>
-                           </table>
-                        </div>
-                     </div>
-                  </div>
+						<div class="card shadow mb-5">
+							<div id="cuponeras" class="card-header py-3">
+								<p class="text-primary m-0 font-weight-bold">Cuponeras del
+									socio</p>
+							</div>
+							<div id="cuponeras-cont" class="card-body">
+								<div class="row">
+									<table class="table table-hover">
+										<thead>
+											<tr>
+												<th scope="col">#</th>
+												<th scope="col">Nombre</th>
+												<th scope="col">Descripcion</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<th scope="row">1</th>
+												<td><a href="consultaCuponera.html">Pelota</a></td>
+												<td>Deportes con pelota</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
 
                   <div class="card shadow mb-5">
                      <div id="seguidos-siguiendo" class="card-header py-3">
@@ -455,6 +429,14 @@
    <script>
       $(document).ready(function () {
          $('.menuContainer').load('./menu.html');
+         
+         profesor = 0;
+         profesorPerfilPropio = 0;
+         FuncionMostrarDependiendoProfSocio(profesor);
+         EsElPropioProfesor(profesorPerfilPropio);
+
+         //ocultar info
+
       });
    </script>
    <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
@@ -464,42 +446,27 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
       integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
       crossorigin="anonymous"></script>
-   <script>
-      $(function () {
-         enable_cb();
-         $("#formCheck-1").click(enable_cb);
-      });
 
-      function enable_cb() {
-         if (this.checked) {
-            $(".soloProfesor").removeAttr("disabled");
-         } else {
-            $(".soloProfesor").attr("disabled", true);
-         }
+   <script>
+         
+   function FuncionMostrarDependiendoProfSocio(esProf) {
+      if ( esProf === 1 ) {
+         $(".soloProfesor").show();
       }
-   </script>
-   <script>
-      $("form").submit(function (e) {
+      else{
+         $(".soloProfesor").hide();
+      }
+   }
 
-         //Compruebo si al seleccionar profesor tambien selecciono una inst dep
-         if ($("#formCheck-1").prop('checked')) {
-            if ($("#institucionSelec").val() == "") {
-               alert("Seleccione una institucion");
-               e.preventDefault(e);
-            }
-         }
+   function EsElPropioProfesor(profesorPerfilPropio) {
+         if ( profesorPerfilPropio === 1 ) {
+            $(".propioProfesor").show();
+      }
+      else{
+         $(".propioProfesor").hide();
+      }
+   }
 
-         //compruebo que las password sean iguales
-         var pass = $("#pass").val();
-         var confpass = $("#confpass").val();
-         if (!(pass === confpass)) {
-
-            alert("Las contrasenias no coinciden");
-            e.preventDefault(e);
-         }
-
-
-      });
    </script>
 
    <script>
